  - Action 0 road vehicle prop 20,
  - Action 0 ship prop 1B.
  - Action 0 plane prop 1B.
  - Action 0 general variable properties 08, 11, 12.
  - Action 0 house props 21..22.
  - Action 0 bridge props 00, 10..13.
  - Action 0 object properties 0B..10.
  - Action 0 railtype properties 08..16.
  - Action 0 airport tile properties 08, 09, 0E..11.
  - Action 2 variables 12, 1D, 23, 24.
  - Action 2 vehicle variable 49, 4A.
  - Action 2 stations: fix parameter limits on station var 60.
  - Action 2 house variable 47, 65, 66, 67.
  - Action 2 industry variable 46.
  - Action 2 objects variable 40..43.
  - Action 2 railtype variable 40..43, 80.
  - Action 2 airport tile variable 40..44, 60..62.
  - Action 2 station random bits: only 14h, not 20h bits are available.
  - Action 2 object random bits.
  - Action 2 canal random bits.
  - Action 2 railtype random bits.
  - Action 2 airport tile random bits.
  - Action 2 callback 149 works for objects.
  - Action 2 callbacks 14D..150, 152..154.
  - Action 5 types 07, 0D, 14, 15.
  - Action 4 text IDs F960..F99A.
  - Action 4 twenty two new languages.
  - Action 7 variables A2..A4.
  - Action D variables A1..A4 were not readable.
- Fix U+E0xx characters being output quoted.
- Fix a hang when parsing non-UTF-8 quoted strings.
- Fix complaints about both params of action D operator 80 being FF.
- Fix assert when encountering end-of-line "comments" that begin with a
  single forward slash.
- Fix comments not prefixed by whitespace could cause NFORenum to reject
  the preceding escape.
- Fix color codes in action 8 are permitted.
- Fix a 64-bit sign-extension vs zero-extension crash.
- Fix an action0 with no IDs caused a hang of NFORenum.
- Fix the error message "A portion of sprite xx could not be processed."
  reported the sprite before the one with the error.
- Remove warning 135 (first sprite cannot share bounding box with
  previous sprite) as it's no longer a valid warning since both openttd