@@ -132,6 +132,9 @@ ESCAPE_OVR(0F,"2rst",2,Is2Op)
 ESCAPE_OVR(0F,"2r",2,Is2Op)
 ESCAPE_OVR(11,"2ror",2,Is2Op)
 ESCAPE_OVR(11,"2rot",2,Is2Op)
+ESCAPE_OVR(14,"2<<",2,Is2Op)
+ESCAPE_OVR(15,"2u>>",2,Is2Op)
+ESCAPE_OVR(16,"2>>",2,Is2Op)
 
 ESCAPE_79(00,"71",3)
 ESCAPE_79(01,"70",3)
